k8s/sample-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onion-sample-app-svc
  namespace: sample-ns
spec:
  ports:
  - port: 5432
    name: http-swagger
  - port: 12345
    name: grpc-onion
  selector:
    app: onion-sample-app
