k8s/sample-app/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onion-sample-vsvc
  namespace: sample-ns
spec:
  hosts:
  - "*"
  gateways:
  - onion-sample-app-gw
  http:
  - match:
    - port: 5432
    route:
    - destination:
        host: onion-svc.sample-ns.svc.cluster.local
  - match:
    - port: 12345
    route:
    - destination:
        host: onion-svc.sample-ns.svc.cluster.local
